# aya_ma2e

./: .gitignore  DEPLOYMENT.md  PITCH.md  README.md  assistant_virtuel_poc.md  build_pptx.js  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: bootstrap.py  main.py
backend/app/api/: audit.py  auth.py  dossiers.py  knowledge.py  me.py  tenants.py
backend/app/conversation/: intent_router.py  llm.py  state_machine.py
backend/app/core/: config.py  database.py  redis.py  security.py  storage.py  tenancy.py
backend/app/models/: __init__.py  audit.py  consent.py  conversation.py  dossier.py  knowledge.py  tenant.py  user.py
backend/app/schemas/: dossier.py  tenant.py
backend/app/services/: audit_service.py  consent_service.py  dossiers.py  embeddings.py  knowledge_ingest.py  notifications.py  ocr_mindee.py  ocr_mock.py  rag.py  scraper.py
backend/app/webhooks/: telegram.py  web.py  whatsapp.py
backend/scripts/: migrate_knowledge_tables.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/acces/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dossiers/: page.tsx
frontend/components/: ConfirmProvider.tsx  FloatingChatButton.tsx  Header.tsx  Logo.tsx  Sidebar.tsx  icons.tsx
frontend/lib/: api.ts
scripts/: build_pptx.js  cleanup_test_dossiers.py  ingest_ma2e.py  setup_telegram_webhook.py  setup_whatsapp_webhook.py  sync-branches.sh
seeds/: seed.py
(+8 files in other folders)
