[project]
name = "virtual-ai-backend"
version = "0.1.0"
description = "Multi-tenant virtual assistant platform - GS2E Group"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "minio>=7.2.0",
    "groq>=0.13.0",
    "python-telegram-bot>=21.7",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "mindee>=4.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
